parallell optimization fixes

--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -19,7 +19,7 @@
     "import src.study_handler as sh\n",
     "from src.utils import print_yaml, get_shadow_signals, calculate_tauc\n",
     "from LeakPro.leakpro.attacks.mia_attacks.rmia import rmia_vectorised, rmia_get_gtlprobs\n",
-    "from src.save_load import loadTargetSignals, loadShadowModelSignals\n",
+    "from src.save_load import loadTargetSignals, loadShadowModelSignals, loadFbdStudy\n",
     "from src.models.resnet18_model import ResNet18\n",
     "from src.optimize_fbd_model import parallell_optimization\n",
     "from src.dataclasses import FbdArgs\n",
@@ -29,13 +29,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98ad676f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------------------------------------------- #\n",
+    "#  Reload the study to see how many trials are completed  #\n",
+    "# ------------------------------------------------------- #\n",
+    "s_name = \"texas100-mlp3-fbd-4676dc235c\"\n",
+    "s_hash = None\n",
+    "if s_name is not None:\n",
+    "    _, _, _, _, _ = loadFbdStudy(s_name, metadata=True, gtl=True, logits=True)\n",
+    "    s_hash = s_name.split(\"-\")[3]\n",
+    "    print(s_hash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9cad8e5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#---------------------#\n",
-    "#  Load Study Config  #\n",
-    "#---------------------#\n",
+    "# --------------------- #\n",
+    "#   Load Study Config   #\n",
+    "# --------------------- #\n",
     "config = None\n",
     "with open(\"./study_fbd.yaml\") as file:\n",
     "    config = yaml.safe_load(file)\n",
@@ -207,8 +225,10 @@
     "\n",
     "gpu_ids = [0, 1, 2, 3, 4, 5, 6]\n",
     "\n",
+    "# If running several fbd studies adding a node_id can minimize db write deadlocks\n",
+    "node_id = None\n",
     "if config is not None: \n",
-    "    study = parallell_optimization(config, labels, fbd_args, gpu_ids, study_hash=None)"
+    "    study = parallell_optimization(config, labels, fbd_args, gpu_ids, study_hash=s_hash, node_id=node_id)"
    ]
   },
   {
