--- a/train_shadow_models.ipynb
+++ b/train_shadow_models.ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d43da0",
+   "id": "7397c1d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,46 +34,22 @@
     "target_folder = \"resnet-cinic10-c51d329813\"\n",
     "target_path = os.path.join(\"target\", target_folder)\n",
     "\n",
-    "# Target Pickle Metadata .json\n",
-    "metadata_pkl_path = os.path.join(target_path, \"model_metadata.pkl\")\n",
-    "with open(metadata_pkl_path, \"rb\") as f:\n",
-    "    metadata_pkl = pickle.load(f)\n",
-    "    \n",
     "# Target Metadata .json\n",
     "metadata_path = os.path.join(target_path, \"metadata.json\")\n",
     "with open(metadata_path, \"r\") as f:\n",
     "    metadata = json.load(f)\n",
-    "print(\"All metadata loaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7397c1d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ------------------- #\n",
-    "#   Load Train yaml   #\n",
-    "# ------------------- #\n",
-    "config = None\n",
-    "with open(\"./train.yaml\") as file:\n",
-    "    train_config = yaml.safe_load(file)\n",
-    "    \n",
-    "print(\"\\n-------------- Train config --------------\")\n",
-    "print_yaml(train_config)\n",
+    "print(\"Baseline Model Metadata Loaded\")\n",
     "\n",
-    "# Update the train config with target metadata (learning rate, batch size, etc)\n",
-    "train_config['train']['epochs'] = metadata['train']['epochs']\n",
-    "train_config['train']['batch_size'] = metadata['train']['batch_size']\n",
-    "train_config['train']['learning_rate'] = metadata['train']['learning_rate']\n",
-    "train_config['train']['momentum'] = metadata['train']['momentum']\n",
-    "train_config['train']['t_max'] = metadata['train']['t_max']\n",
-    "train_config['train']['drop_rate'] = metadata['train']['drop_rate']\n",
-    "train_config['train']['model'] = metadata['train']['model']\n",
-    "train_config['train']['optimizer'] = metadata['train']['optimizer']\n",
-    "\n",
-    "print(\"\\n-------------- Updated train config --------------\")\n",
+    "# ------------------------ #\n",
+    "#   Create SM Train yaml   #\n",
+    "# ------------------------ #\n",
+    "print(\"\\n-------------- SM Train Config --------------\")\n",
+    "train_config ={\n",
+    "    \"train\": {},\n",
+    "    \"data\": {}\n",
+    "}\n",
+    "train_config[\"train\"] = metadata['train']\n",
+    "train_config[\"data\"] = metadata['data']\n",
     "print_yaml(train_config)"
    ]
   },
