--- a/visualize_baseline_study.ipynb
+++ b/visualize_baseline_study.ipynb
@@ -39,8 +39,7 @@
     "target_folder = \"wideresnet-d971f7dcdc\"\n",
     "logits, in_mask, resc_logits, gtl_probs, metadata, metadata_pkl = loadTargetSignals(target_folder)\n",
     "print(f\"resc_logits first 10: {resc_logits[:10]}, in_mask first 10: {in_mask[:10]}\")\n",
-    "print(f\"resc_logits shape: {resc_logits.shape}, in_mask shape: {in_mask.shape}\")\n",
-    "# Maybe visualize accuracy with a plot or something"
+    "print(f\"resc_logits shape: {resc_logits.shape}, in_mask shape: {in_mask.shape}\")"
    ]
   },
   {
