--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -281,7 +281,7 @@
     "baseline_tpr_curve_rmia, baseline_fpr_curve_rmia = calculate_roc(rmia_scores, baseline_inmask, clip=True)\n",
     "\n",
     "# Thresholds will be base accuracy -5% in steps\n",
-    "w_model_acc_threshold = [baseline_accuracy-0.05, baseline_accuracy-0.10, baseline_accuracy-0.15]\n",
+    "w_model_acc_threshold = [baseline_accuracy-0.05, baseline_accuracy-0.10, baseline_accuracy-0.15, baseline_accuracy-0.20]\n",
     "\n",
     "# Find indices that lie within a +2 range of a threshold index. Return the indices for each threshold.\n",
     "# For each index list compare all tau\n",
@@ -336,9 +336,9 @@
     "random_fpr = np.logspace(-5, 0, 500)   # from 1e-5 to 1 on log scale\n",
     "random_tpr = random_fpr.copy()         # TPR = FPR\n",
     "ax.plot(random_fpr, random_tpr, \"--\", color=\"red\", alpha=0.7, label=\"Random Guessing\")\n",
-    "ax.plot(baseline_fpr_curve_lira, baseline_tpr_curve_lira, color=\"cornflowerblue\", label=f\"Baseline: accuracy={baseline_accuracy:.2f}\")\n",
+    "ax.plot(baseline_fpr_curve_lira, baseline_tpr_curve_lira, color=\"cornflowerblue\", label=f\"Baseline: acc={baseline_accuracy:.2f}\")\n",
     "for tpr, fpr, color, acc, noise, cent, temp in zip(w_lira_tpr_curves, w_lira_fpr_curves, colors, w_acc, w_noise, w_cent, w_temp):\n",
-    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: accuracy={acc:.2f}, σ={noise:.2f}, c={cent:.2f} ,t={temp:.2f}\")\n",
+    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: acc={acc:.2f}, σ={noise:.2f}, c={cent:.1f} ,t={temp:.2f}\")\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.set_xlim(1e-5, 1)\n",
@@ -354,9 +354,9 @@
     "random_fpr = np.logspace(-5, 0, 500)   # from 1e-4 to 1 on log scale\n",
     "random_tpr = random_fpr.copy()         # TPR = FPR\n",
     "ax.plot(random_fpr, random_tpr, \"--\", color=\"red\", alpha=0.7, label=\"Random Guessing\")\n",
-    "ax.plot(baseline_fpr_curve_rmia, baseline_tpr_curve_rmia, color=\"cornflowerblue\", label=f\"Baseline: accuracy={baseline_accuracy:.2f}\")\n",
+    "ax.plot(baseline_fpr_curve_rmia, baseline_tpr_curve_rmia, color=\"cornflowerblue\", label=f\"Baseline: acc={baseline_accuracy:.2f}\")\n",
     "for tpr, fpr, color, acc, noise, cent, temp in zip(w_rmia_tpr_curves, w_rmia_fpr_curves, colors, w_acc, w_noise, w_cent, w_temp):\n",
-    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: accuracy={acc:.2f}, σ={noise:.2f}, c={cent:.2f} ,t={temp:.2f}\")\n",
+    "    ax.plot(fpr, tpr, color=color, label=f\"FbD: acc={acc:.2f}, σ={noise:.2f}, c={cent:.1f} ,t={temp:.2f}\")\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.set_xlim(1e-5, 1)\n",
