updated sm trainer a bit

--- a/train_shadow_models.ipynb
+++ b/train_shadow_models.ipynb
@@ -18,7 +18,24 @@
     "from src.train_models import create_shadow_models_parallel\n",
     "from src.utils import print_yaml, calculate_logits_and_inmask\n",
     "from src.models.resnet18_model import ResNet18\n",
-    "from src.dataset_handler import processDataset, loadDataset"
+    "from src.dataset_handler import processDataset, loadDataset\n",
+    "from src.save_load import loadShadowModelSignals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b24659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ----------------------------- #\n",
+    "#  Train Missing Shadow Models  #\n",
+    "# ----------------------------- #\n",
+    "_, _, _, _, _, missing_indices = loadShadowModelSignals(target_folder)\n",
+    "len(missing_indices)\n",
+    "if len(missing_indices) > 0:\n",
+    "    t_missing = True"
    ]
   },
   {
@@ -93,7 +110,12 @@
     "#   Train the Shadow models   #\n",
     "# --------------------------- #\n",
     "gpu_ids = [0, 1, 2, 3, 4, 5, 6]\n",
-    "results = create_shadow_models_parallel(train_config, 256, gpu_ids, full_dataset, target_folder)"
+    "if t_missing is None:\n",
+    "    train_missing = False\n",
+    "else:\n",
+    "    train_missing = True\n",
+    "\n",
+    "results = create_shadow_models_parallel(train_config, 256, gpu_ids, full_dataset, target_folder, train_missing=train_missing, missing_indices=missing_indices)"
    ]
   },
   {
