--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -112,7 +112,15 @@
     "config['fbd_study'][\"drop_rate\"] = train_metadata[\"drop_rate\"] \n",
     "\n",
     "# Build the study name\n",
-    "config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-fbd'\n",
+    "p_onion = config['fbd_study'][\"privacy_onion\"]\n",
+    "noise_inj = config['fbd_study'][\"noise_injection\"]\n",
+    "assert not (p_onion and noise_inj), \"Privacy onion and noise injection can not be conducted simultaneously\" \n",
+    "if p_onion:\n",
+    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-po'\n",
+    "elif noise_inj:\n",
+    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-noise'\n",
+    "else:\n",
+    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-fbd'\n",
     "\n",
     "\n",
     "print_yaml(\"\\n------------ Updated study config: ------------\")\n",
