added custom graph creation and updated fbd notebook

--- a/optimize_fbd_model.ipynb
+++ b/optimize_fbd_model.ipynb
@@ -112,16 +112,15 @@
     "config['fbd_study'][\"drop_rate\"] = train_metadata[\"drop_rate\"] \n",
     "\n",
     "# Build the study name\n",
-    "p_onion = config['fbd_study'][\"privacy_onion\"]\n",
-    "noise_inj = config['fbd_study'][\"noise_injection\"]\n",
+    "p_onion = config.get('fbd_study').get(\"privacy_onion\", False)\n",
+    "noise_inj = config.get('fbd_study').get(\"noise_injection\", False)\n",
     "assert not (p_onion and noise_inj), \"Privacy onion and noise injection can not be conducted simultaneously\" \n",
     "if p_onion:\n",
-    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-po'\n",
+    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{config[\"fbd_study\"][\"model\"]}-po'\n",
     "elif noise_inj:\n",
-    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-noise'\n",
+    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{config[\"fbd_study\"][\"model\"]}-noise'\n",
     "else:\n",
-    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{train_metadata[\"model\"]}-fbd'\n",
-    "\n",
+    "    config[\"fbd_study\"][\"study_name\"] = f'{config[\"data\"][\"dataset\"]}-{config[\"fbd_study\"][\"model\"]}-fbd'\n",
     "\n",
     "print_yaml(\"\\n------------ Updated study config: ------------\")\n",
     "print_yaml(config['fbd_study'])"
