updated load and save funs to adhere to new directory structure

--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import math \n",
     "from tqdm import tqdm\n",
+    "from sklearn.metrics import roc_curve, roc_auc_score\n",
     "\n",
     "from src.utils import print_yaml, rescale_logits, calculate_tau, plot_with_band, plot_bootstrap_band, calculate_roc, pick_weighted_models\n",
     "from src.save_load import savePlot, loadFbdStudy, loadTargetSignals, loadShadowModelSignals, saveVisData, loadVisData\n",
@@ -33,12 +34,13 @@
     "#   Load fbd study results   #\n",
     "# -------------------------- #\n",
     "study_name = \"cifar10-resnet-fbd-00c3fdac98\"\n",
-    "study_path = os.path.join(\"study\", study_name)\n",
+    "study_type = study_name.split(\"-\")[2]\n",
+    "study_path = os.path.join(\"study\", study_type+\"_studies\") \n",
     "metadata = []\n",
     "gtl_probs = []\n",
     "resc_logits = []\n",
-    "\n",
-    "metadata, fbd_trial_results, gtl_probs, resc_logits, labels = loadFbdStudy(study_name, metadata=True, gtl=True, logits=True)\n",
+    "# If path is removed it will attempt to load the study from \"study/...\"\n",
+    "metadata, fbd_trial_results, gtl_probs, resc_logits, labels = loadFbdStudy(study_name, metadata=True, gtl=True, logits=True, path=study_path)\n",
     "target_folder = metadata[\"study\"][\"target_folder\"]"
    ]
   },
@@ -126,14 +128,14 @@
     "# ------------------------------------- #\n",
     "#   Audit or Load the weighted target   #\n",
     "# ------------------------------------- #\n",
-    "data = loadVisData(study_name)\n",
+    "data = loadVisData(study_name, study_path=study_path)  # If study_path is removed it will attempt to load the study from \"study/...\"\n",
     "\n",
     "# Audit all weighted models with RMIA\n",
     "if data.get('w_rmia_scores') is None:\n",
     "    weighted_rmia_scores = []\n",
     "    for gtl in tqdm(gtl_probs, desc=f\"gtl_probs\"):\n",
     "        weighted_rmia_scores.append(rmia_vectorised(gtl, shadow_gtl_probs, shadow_inmask, online=True, use_gpu_if_available=True))\n",
-    "    saveVisData(np.stack(weighted_rmia_scores, axis=0), \"w_rmia_scores\", study_name)\n",
+    "    saveVisData(np.stack(weighted_rmia_scores, axis=0), \"w_rmia_scores\", study_name, path=study_type_path)\n",
     "else:\n",
     "    weighted_rmia_scores = data.get('w_rmia_scores')\n",
     "# Audit all weighted models with RMIA\n",
@@ -141,7 +143,7 @@
     "    weighted_lira_scores = []\n",
     "    for resc_logits in tqdm(resc_logits, desc=f\"resc_logits\"):\n",
     "        weighted_lira_scores.append(lira_vectorized(resc_logits, rescaled_shadow_logits, shadow_inmask, \"carlini\", online=True))\n",
-    "    saveVisData(np.stack(weighted_lira_scores, axis=0), \"w_lira_scores\", study_name)\n",
+    "    saveVisData(np.stack(weighted_lira_scores, axis=0), \"w_lira_scores\", study_name, path=study_type_path)\n",
     "else:\n",
     "    weighted_lira_scores = data.get('w_lira_scores')\n",
     "    \n",
@@ -264,7 +266,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "savePlot(fig, \"Scatter_plots\", study_name, \"study\")"
+    "savePlot(fig, \"Scatter_plots\", study_name, study_path)"
    ]
   },
   {
@@ -277,6 +279,7 @@
     "# ----------------------- #\n",
     "#  Calculate ROC Metrics  #\n",
     "# ----------------------- #\n",
+    "// TODO SKLEARN ROC\n",
     "baseline_tpr_curve_lira, baseline_fpr_curve_lira = calculate_roc(lira_scores, baseline_inmask, clip=True)\n",
     "baseline_tpr_curve_rmia, baseline_fpr_curve_rmia = calculate_roc(rmia_scores, baseline_inmask, clip=True)\n",
     "\n",
@@ -370,7 +373,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "savePlot(fig, \"roc_at_set_accuracy\", study_name, \"study\")"
+    "savePlot(fig, \"roc_at_set_accuracy\", study_name, study_path)"
    ]
   },
   {
@@ -423,7 +426,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "savePlot(fig, \"std_variability_bands\", study_name, \"study\")"
+    "savePlot(fig, \"std_variability_bands\", study_name, study_path)"
    ]
   },
   {
@@ -477,7 +480,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "savePlot(fig, \"confidence_intervals\", study_name, \"study\")"
+    "savePlot(fig, \"confidence_intervals\", study_name, study_path)"
    ]
   },
   {
@@ -622,7 +625,7 @@
     "fig = plt.gcf()\n",
     "fig.show()\n",
     "\n",
-    "savePlot(fig, f\"pareto_scatter_{grp_fpr}\", study_name, \"study\")"
+    "savePlot(fig, f\"pareto_scatter_{grp_fpr}\", study_name, study_path)"
    ]
   }
  ],
