--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -266,7 +266,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "savePlot(fig, \"Scatter_plots\", study_name, study_path)"
+    "savePlot(fig, \"scatter_plots\", study_name, study_path)"
    ]
   },
   {
