--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -16,8 +16,8 @@
     "from tqdm import tqdm\n",
     "from sklearn.metrics import roc_curve, roc_auc_score\n",
     "\n",
-    "from src.utils import print_yaml, rescale_logits, calculate_tau, plot_with_band, plot_bootstrap_band, pick_weighted_models, calculate_group_roc_pooled, plot_roc, plot_pareto\n",
-    "from src.save_load import savePlot, loadFbdStudy, loadTargetSignals, loadShadowModelSignals, saveVisData, loadVisData, calculate_group_roc_pooled\n",
+    "from src.utils import print_yaml, rescale_logits, calculate_tau, plot_with_band, plot_bootstrap_band, pick_weighted_models, calculate_group_roc_pooled, plot_roc, plot_pareto, calculate_group_roc_pooled\n",
+    "from src.save_load import savePlot, loadFbdStudy, loadTargetSignals, loadShadowModelSignals, saveVisData, loadVisData\n",
     "from LeakPro.leakpro.attacks.mia_attacks.lira import lira_vectorized\n",
     "from LeakPro.leakpro.attacks.mia_attacks.rmia import rmia_vectorised, rmia_get_gtlprobs\n",
     "from src.save_load import savePlot"
