--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -338,7 +338,7 @@
     "\n",
     "print(fbd_grps.shape)\n",
     "group_threshold = 7\n",
-    "fbd_grps = fbd_grps[fbd_grps[\"n\"]>=7]\n",
+    "fbd_grps = fbd_grps[fbd_grps[\"n\"]>=group_threshold]\n",
     "print(fbd_grps.shape)\n",
     "fbd_grps"
    ]
