strict fbd implemented

--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -400,7 +400,7 @@
     "\n",
     "group_title = \"roc_fbd_groups\"\n",
     "plot_path = os.path.join(os.path.join(study_path, study_name), \"plot\")\n",
-    "save_path = os.path.join(plot_path, group_title + \".tex\")\n",
+    "save_path = os.path.join(plot_path, group_title)\n",
     "\n",
     "fbd_grps_rounded = fbd_grps.round({\n",
     "    \"accuracy_mean\": 3,\n",
@@ -412,6 +412,10 @@
     "    \"temperature_mean\": 3,\n",
     "    \"temperature_std\": 3\n",
     "})\n",
+    "\n",
+    "# Save csv\n",
+    "fbd_grps_rounded.to_csv(save_path+\".csv\")\n",
+    "\n",
     "# Convert to LaTeX table\n",
     "latex_table = fbd_grps_rounded.to_latex(\n",
     "    index=True,             # keeps the acc_band as the first column\n",
@@ -421,7 +425,7 @@
     "    column_format=\"lccccccc\" # left for acc_band, centered for other columns\n",
     ")\n",
     "# Save to file\n",
-    "with open(save_path, \"w\") as f:\n",
+    "with open(save_path+\".tex\", \"w\") as f:\n",
     "    f.write(latex_table)\n",
     "\n",
     "savePlot(fig, group_title, study_name, study_path)"
