--- a/visualize_fbd_study.ipynb
+++ b/visualize_fbd_study.ipynb
@@ -340,6 +340,14 @@
     "group_threshold = 7\n",
     "fbd_grps = fbd_grps[fbd_grps[\"n\"]>=group_threshold]\n",
     "print(fbd_grps.shape)\n",
+    "cull_offset_noise = True\n",
+    "if cull_offset_noise:\n",
+    "    idx_df = fbd_grps.index.to_frame(index=False)\n",
+    "    # keep only noise values that are NOT offset by ~1e-4\n",
+    "    valid_noise_mask = ~np.isclose(np.mod(idx_df[\"noise\"], 0.001), 0.0001, atol=1e-6)\n",
+    "    # apply mask back to grouped dataframe\n",
+    "    fbd_grps = fbd_grps.loc[valid_noise_mask]\n",
+    "    print(fbd_grps.shape)\n",
     "fbd_grps"
    ]
   },
@@ -546,6 +554,19 @@
     "fig = plt.gcf()\n",
     "fig.show()\n",
     "savePlot(fig, f\"pareto_frontiers\", study_name, study_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4351f221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ----------------------------------- #\n",
+    "#  Privacy Onion Pareto Visualization #\n",
+    "# ----------------------------------- #\n",
+    "# Remove scatter points and plot FbD, PO & NI paretos"
    ]
   }
  ],
